# ebay-alerts

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  searches.yaml
app/: config_loader.py  llm.py  main.py  models.py  notifier.py  scheduler.py  settings.py  store.py  web.py
app/ebay/: auth.py  client.py
app/static/: index.html
docs/: searches.md
tests/: test_config_roundtrip.py  test_ebay_client.py  test_filters.py  test_listing.py  test_llm_parsing.py  test_store.py  test_web_api.py
